# test-mvp

./: .env.example  .gitignore  README.md  pyproject.toml
demo_agents/: agent_a_gemini.py  agent_b_groq.py  conflict1.py  conflict2.py  shared_resource.json
src/protomesh/api/: main.py
src/protomesh/core/: lock_manager.py  policy_engine.py
src/protomesh/sdk/: client.py
src/protomesh/storage/: database.py  models.py
tests/: test_locks.py
